fix link action text alignment when more than one present

--- a/styles/index.less
+++ b/styles/index.less
@@ -48,4 +48,5 @@
 .action_links a {
 	font-size: 90%;
 	margin-right: 20px;
+	float: left;
 }
